@@ -9,7 +9,7 @@ perl_version '5.008001';
 all_from 'lib/Net/Twitter/IRC.pm';
 
 requires 'MooseX::POE'                 => 0;
-requires 'Net::Twitter'                => '1.20';
+requires 'Net::Twitter'                => '1.21';
 requires 'Email::Valid'                => 0;
 requires 'POE::Component::Server::IRC' => 0.02005;
 requires 'Log::Log4perl';
