@@ -1,4 +1,5 @@
 0.02_5
+    - Net::Twitter 1.21 works around Twitter API fail on friendships/exists
     - error on messages longer than 140 characters
     - easy replies: "nick: ..." becomes "post @nick ..."
 
